--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.port=8081
+server.port=5000
+spring.application.name=customer-service
 spring.datasource.url=jdbc:mysql://mysql-1.c2hwoun3tpnr.ap-southeast-1.rds.amazonaws.com:3306/hr
 spring.datasource.username=admin
 spring.datasource.password=admin1234
